connects to db (blocking)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=orderinvoiceapp
+# JDBC Configuration
+spring.datasource.url=jdbc:oracle:thin:@192.168.1.211:1521:XE
+spring.datasource.username=theosmuller
+spring.datasource.password=hoivgd80
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# R2DBC Configuration
+spring.r2dbc.url=r2dbc:oracle://192.168.1.211:1521/XE
+spring.r2dbc.username=theosmuller
+spring.r2dbc.password=hoivgd80
