--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.r2dbc.url=r2dbc:oracle://192.168.1.211:1521/XE
 spring.r2dbc.username=theosmuller
 spring.r2dbc.password=hoivgd80
+
+logging.level.org.springframework.jdbc.core=TRACE
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
