reactive version, issues after getting orders

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.r2dbc.url=r2dbc:oracle://192.168.1.211:1521/XE
 spring.r2dbc.username=theosmuller
 spring.r2dbc.password=hoivgd80
 
-#logging.level.org.springframework.jdbc.core=TRACE
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.springframework.jdbc.core=TRACE
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.data.jdbc.repositories.enabled=true
+spring.data.r2dbc.repositories.enabled=true
+logging.level.org.springframework.r2dbc=TRACE
