separating blocking implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.data.jdbc.repositories.enabled=true
 spring.data.r2dbc.repositories.enabled=true
 logging.level.org.springframework.r2dbc=TRACE
+
+server.port=8090
